fixed project content overflow issue on mobile

--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -52,7 +52,7 @@ mobile styles!
 		float: none;
 		width: 100%;
 		padding: 20px 20px;
-		height: 300px;
+		height: 380px;
 		font-size: 15px;
 
 		h2 {
